<resources>
    <string name="msg_default_status">将扫描框对准二维码，即可自动扫描</string>
    <string name="app_name">newSea</string>
    <string name="back">返回</string>
    <string name="userId">用户名</string>
    <string name="password">密码</string>
    <string name="Save_Password">保存密码</string>
    <string name="land">登陆</string>
    <string name="news">新闻</string>
    <string name="notification">通知</string>
    <string name="me">我</string>
    <string name="todo">待办</string>
    <string name="launch">提交</string>
    <string name="apply">申请</string>

    <string name="Basic_Information">基本信息</string>
    <string name="Details_Information">明细信息</string>
    <string name="Attachment_Info">附件信息</string>
    <string name="Reimbursement_Info">报销信息</string>
    <string name="Add_Detail">添加明细</string>
    <string name="Total">明细合计</string>
    <string name="Please_Select">请选择</string>
    <string name="Please_Fill">请填写</string>

    <string name="Summary">流程内容</string>
    <string name="Company_Name">公司名称</string>
    <string name="Department">部门/车间/班组</string>
    <string name="Employee_ID">员工编号</string>
    <string name="Name">姓名</string>
    <string name="Position">岗位</string>
    <string name="Reimbursement_or_not">是否需要报销</string>
    <string name="Leave_Budget">公出预算</string>
    <string name="Leave_Type">公出类型</string>
    <string name="Expected_Leave_Days">预计公出天数</string>
    <string name="BusinessTrip_Reasons">公出事由</string>
    <string name="Expected_Leave_Date">预计离开时间</string>
    <string name="Expected_Return_Date">预计回来时间</string>
    <string name="Leave_Date">出发日期</string>
    <string name="Return_Date">到达日期</string>
    <string name="From">出发地</string>
    <string name="To">目的地</string>
    <string name="Transport">交通工具</string>
    <string name="Air_Ticket">机票</string>
    <string name="Transport_Cost">交通费</string>
    <string name="Hotel_Cost">住宿费</string>
    <string name="Other_Cost">其他费用</string>
    <string name="Allowance">补贴</string>
    <string name="Overtime_category">加班类别</string>
    <string name="Starting_Time">开始时间</string>
    <string name="Ending_Time">结束时间</string>
    <string name="Overtime_Hours">加班时长</string>
    <string name="Overtime_Reason">加班原因</string>
    <string name="Overtime_Type">加班类型</string>
    <string name="Applicant">申请人</string>
    <string name="Lave_Year_Days">年假剩余天数/天</string>
    <string name="Lave_Hours">调休剩余小时数/小时</string>
    <string name="Cumulative_number_of_antenatal_examination">累计产前检查次数/次</string>
    <string name="Total_Days">累计事假天数/天</string>
    <string name="Rest_Leave_Type">请假类别</string>
    <string name="Leave_Time">请假/调休时长</string>
    <string name="Leave_Causes">请假原因/备注</string>
    <string name="Attachment_Type">附件分组</string>
    <string name="Reimbursement_Person">报销人</string>
    <string name="Total2">合计</string>
    <string name="Grade">岗级</string>
    <string name="Cost_Center">成本中心</string>
    <string name="Payee_Employee_ID">收款员工编号</string>
    <string name="Payee_Name">收款人姓名</string>
    <string name="Payee_Bank">收款方所属银行</string>
    <string name="Payee_Bank_Account">收款银行账户</string>
    <string name="Payee_Bank_Adress">收款地址</string>
    <string name="Payee_Branch_Bank">支行名称</string>
    <string name="IsDomesti">是否国内公出</string>
    <string name="Has_Accommodation">是否解决住宿</string>
    <string name="Has_Borrow">是否冲借款</string>
    <string name="Related_Business_Trip_Orders">公出申请</string>
    <string name="Relate_Hospitalit_Order">招待申请</string>
    <string name="Reason">事由</string>
    <string name="Operator">经办人</string>
    <string name="Payment_Type">付款类型</string>
    <string name="Payment_Content">付款内容</string>
    <string name="Name_of_Payee">收款方单位</string>
    <string name="Has_Invoice">是否有发票</string>
    <string name="Invoice_Number">发票号码</string>
    <string name="Invoice_Amount">发票金额</string>
    <string name="Has_Buget">是否有预算</string>
    <string name="Payment_Amount">付款金额</string>
    <string name="Expense_Type">费用类别</string>
    <string name="Expense_Cost">金额</string>
    <string name="Submitter">提交人</string>
    <string name="Number_of_Guests">招待人数</string>
    <string name="Hosting_expense">招待金额</string>
    <string name="Direct_Reimbursement">是否直接报销</string>
    <string name="Place_Of_Entertainment">招待地点</string>
    <string name="Our_Participant_hosts">我方参加招待人</string>
    <string name="Entertainment_Content">招待内容</string>
    <string name="Reimbursement_Employee_ID">报销员工编号</string>
    <string name="Yes">是</string>
    <string name="No">否</string>
    <string name="Received_Date">单据接收日期</string>
    <string name="Audit_Total_Amount">实报金额</string>
    <string name="Is_Render_Accountant">是否生成会计凭证</string>
    <string name="Generate_Accounting_Vouchers_Type">凭证生成类型</string>
    <string name="Is_Compliance">是否合规</string>
    <string name="ExpenseType">费用归类</string>
    <string name="Guests_Cost">招待费</string>
    <string name="Audit_Amount">审核金额</string>
    <string name="Transport_Cost_Rate">交通费税率</string>
    <string name="Hotel_Cost_Rate">住宿费税率</string>
    <string name="Select_Attachments">上传附件</string>
    <string name="Payment_Amount_of_other_ways">其他方式支付金额</string>
    <string name="Capital_Platform_Payment_Amount">资金平台付款金额</string>
    <string name="Expenditure_Type">支出类别</string>
    <string name="Cashier">出纳</string>
    <string name="Cash_Pay_Amount">现金支付金额</string>
    <string name="Dealings_Pay_Amount">冲抵借款金额</string>
    <string name="Deductible_Or_Not">是否可抵扣</string>
    <string name="Tax_Rate">税率</string>
    <string name="Amount_Without_Tax">不含税金额</string>
    <string name="Amount_of_Tax">税额</string>
    <string name="Voucher_Number">会计凭证编号</string>
    <string name="Pay_Status">付款状态</string>
    <string name="Paying_Bank_Account">付款银行账号</string>
    <string name="Paying_Bank_Name">付款银行名称</string>
    <string name="Payment_Description">付款说明</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
