<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LibMainActivity"
    android:background="#f7f7f7">
    <com.example.hgtxxgl.application.view.HandToolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/fl_container"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/image" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lib_pb"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/image"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CBCBCB"
        android:layout_above="@+id/bottom_bar"/>

    <RadioGroup
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_main_news_center"
            style="@style/BottomBarItem"
            android:checked="true"
            android:enabled="false"
            android:drawableTop="@drawable/home_page_radio_button_my_news"
            android:text="@string/news" />

        <RadioButton
            android:id="@+id/rb_main_notification_center"
            style="@style/BottomBarItem"
            android:enabled="false"
            android:drawableTop="@drawable/home_page_radio_button_my_notification"
            android:text="@string/notification" />

        <RadioButton
            android:id="@+id/rb_main_leave_todo_center"
            style="@style/BottomBarItem"
            android:enabled="false"
            android:drawableTop="@drawable/home_page_radio_button_my_comm"
            android:text="@string/todo" />
        <RadioButton
            android:enabled="false"
            android:id="@+id/rb_main_leave_launch_center"
            style="@style/BottomBarItem"
            android:drawableTop="@drawable/home_page_radio_button_my_launch"
            android:text="@string/launch" />
        <RadioButton
            android:enabled="false"
            android:id="@+id/rb_main_leave_apply_center"
            style="@style/BottomBarItem"
            android:drawableTop="@drawable/home_page_radio_button_post_flow"
            android:text="@string/apply" />
        <RadioButton
            android:enabled="false"
            android:id="@+id/rb_main_personal_center"
            style="@style/BottomBarItem"
            android:drawableTop="@drawable/home_page_radio_button_post_personal"
            android:text="@string/me" />
    </RadioGroup>

</RelativeLayout>
